# wuzapi-chatwoot

./: .env.example  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  comandos.txt  docker-compose.yml  llm.txt  main.py  pyproject.toml  requirements.txt
src/application/use_cases/: connect_session.py  handle_qr_event.py  handle_session_command.py  send_message_to_whatsapp.py  sync_message_to_chatwoot.py
src/domain/entities/: whatsapp_message.py  wuzapi_session.py
src/domain/ports/: audio_converter.py  cache_repository.py  chatwoot_repository.py  session_repository.py  wuzapi_repository.py
src/domain/value_objects/: message_type.py  phone_number.py  session_command.py  session_status.py
src/infrastructure/api/: app.py  dependencies.py
src/infrastructure/api/handlers/: __init__.py  base_handler.py  chatwoot_handler.py  wuzapi_handler.py
src/infrastructure/api/routers/: __init__.py  chatwoot_router.py  wuzapi_router.py
src/infrastructure/chatwoot/: client.py  session_notifier.py
src/infrastructure/logging/: setup.py
src/infrastructure/media/: __init__.py  audio_converter.py  media_downloader.py
src/infrastructure/persistence/: memory_cache.py  redis_cache.py
src/infrastructure/wuzapi/: client.py  session_client.py
src/shared/: config.py
